k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: mapdotui
spec:
  selector:
    app: mapdotui
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapdotui
spec:
  selector:
    matchLabels:
      app: mapdotui
  template:
    metadata:
      labels:
        app: mapdotui
    spec:
      containers:
      - name: mapdotui
        image: <your-registry-prefix>.azurecr.io/mapdotui:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
